fix alignement for input without icon

--- a/apps/web/ui/components/InputField/Input.module.css
+++ b/apps/web/ui/components/InputField/Input.module.css
@@ -21,6 +21,7 @@
 }
 .noicon {
   padding: 14px 12px 14px 1rem;
+  margin-left: -1.8rem;
 }
 
 .input:hover {
